--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: coresoi
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
     person("Niccolò", "Salvini", , "niccolo.salvini27@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-3444-4094"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Suggests: 
+    knitr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -15,3 +17,4 @@ Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 URL: https://core-forge.github.io/coresoi/
+VignetteBuilder: knitr
