--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: coresoi
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: 
     person("Niccolò", "Salvini", , "niccolo.salvini27@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-3444-4094"))
@@ -18,3 +18,16 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 URL: https://core-forge.github.io/coresoi/
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
+LazyData: true
+Imports: 
+    cli,
+    dplyr,
+    forcats,
+    glue,
+    lifecycle,
+    lubridate,
+    magrittr,
+    rlang,
+    withr
