--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: coresoi
-Title: What the Package Does (One Line, Title Case)
+Title: Measuring Corruption Risk in Emergency
 Version: 0.0.0.9002
 Authors@R: 
     person("Niccolò", "Salvini", , "niccolo.salvini27@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-3444-4094"))
-Description: What the package does (one paragraph).
+Description: the package offers a set of indicators explicitly built on top of BNDCP to measure corruption in emergency
 License: MIT + file LICENSE
 Suggests: 
     knitr,
@@ -30,4 +30,5 @@ Imports:
     lubridate,
     magrittr,
     rlang,
+    stringr,
     withr
