minor commit: edit docs

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,6 +16,4 @@ reference:
   - title: "Risk Indicators"
     desc: "COrruption Risk Indicators in Emergency"
     contents:
-      - 01-high-winning-rate
-      - 02-high-economic-value
-      - 11-dist-between-awd-val-sums-paid
+      - ind_11
