add `ind_11` high winning rate  + wordlist

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,10 @@ Imports:
     forcats,
     glue,
     lifecycle,
+    logger,
     lubridate,
     magrittr,
     rlang,
     stringr,
+    tidyr,
     withr
