fix doc compilation bug, add `ind_1` to pkgdown ref

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,4 +16,5 @@ reference:
   - title: "Risk Indicators"
     desc: "COrruption Risk Indicators in Emergency"
     contents:
+      - ind_1
       - ind_11
