added `ind_2` High Economic Value

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export("%>%")
 export(compute_fisher)
+export(compute_wilcox_test)
 export(download_and_unzip)
 export(ind_1)
 export(ind_11)
+export(ind_2)
 import(rlang)
 importFrom(dplyr,contains)
 importFrom(dplyr,filter)
@@ -15,10 +17,12 @@ importFrom(dplyr,n)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(forcats,as_factor)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(stringr,str_sub)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,unnest)
