✨ add indicatore 3 i.e.  One-shot opportunistic companies + minor fix
- polished dev.r
- renamed factors in test data
- docs update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(download_and_unzip)
 export(ind_1)
 export(ind_11)
 export(ind_2)
+export(ind_3)
 import(rlang)
+importFrom(dplyr,across)
 importFrom(dplyr,contains)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -16,11 +18,14 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(forcats,as_factor)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(lubridate,interval)
+importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(stringr,str_sub)
