✨ added ind_5_bis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,20 @@ export(ind_1)
 export(ind_11)
 export(ind_2)
 export(ind_3)
+export(ind_5_bis)
 import(rlang)
 importFrom(dplyr,across)
+importFrom(dplyr,arrange)
 importFrom(dplyr,contains)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,if_else)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
