--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export("%>%")
 export(compute_fisher)
 export(compute_wilcox_test)
 export(download_and_unzip)
+export(generate_indicator_schema)
+export(get_emergency_id_from_date)
+export(get_emergency_name_from_date)
 export(ind_1)
 export(ind_11)
 export(ind_2)
@@ -26,11 +29,14 @@ importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
+importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(forcats,as_factor)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
+importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
+importFrom(lubridate,now)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
