--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@
 export("%>%")
 export(compute_fisher)
 export(compute_wilcox_test)
-export(download_and_unzip)
 export(generate_indicator_schema)
 export(get_emergency_id_from_date)
 export(get_emergency_name_from_date)
 export(ind_1)
+export(ind_10)
 export(ind_11)
 export(ind_2)
 export(ind_3)
@@ -38,6 +38,7 @@ importFrom(lubridate,interval)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
+importFrom(stats,prop.test)
 importFrom(stringr,str_sub)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,unnest)
