styled and documented

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,8 @@
 export("%>%")
 export(compute_fisher)
 export(compute_wilcox_test)
+export(emergency_dates)
 export(generate_indicator_schema)
-export(get_emergency_id_from_date)
-export(get_emergency_name_from_date)
 export(ind_1)
 export(ind_10)
 export(ind_11)
@@ -34,6 +33,7 @@ importFrom(forcats,as_factor)
 importFrom(glue,glue)
 importFrom(lifecycle,deprecated)
 importFrom(lubridate,"%within%")
+importFrom(lubridate,dmy)
 importFrom(lubridate,interval)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
