added `ind_9` lenghty contracts and test!
+ __styled__ code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,17 @@ export(generate_indicator_schema)
 export(ind_1)
 export(ind_2)
 export(ind_3)
+export(ind_5)
 export(ind_6)
 export(ind_7)
 export(ind_8)
+export(ind_9)
 import(rlang)
+importFrom(DescTools,Gini)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,contains)
+importFrom(dplyr,count)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -42,4 +46,5 @@ importFrom(magrittr,"%>%")
 importFrom(stats,prop.test)
 importFrom(stringr,str_sub)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,unnest)
