refactored `ind_8` switching test over user inputm choices are "barnard", "fisher", "z-test"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(compute_barnard)
 export(compute_fisher)
+export(compute_prop_test)
 export(compute_wilcox_test)
 export(emergency_dates)
 export(generate_indicator_schema)
