--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,19 @@
 export("%>%")
 export(compute_barnard)
 export(compute_fisher)
+export(compute_kolmogorov_smirnoff)
 export(compute_prop_test)
-export(compute_wilcox_test)
+export(compute_wilcox)
 export(emergency_dates)
 export(generate_indicator_schema)
 export(ind_1)
 export(ind_2)
 export(ind_3)
+export(ind_4)
 export(ind_5)
 export(ind_6)
 export(ind_7)
 export(ind_8)
-export(ind_9)
 import(rlang)
 importFrom(DescTools,Gini)
 importFrom(dplyr,across)
