--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(dplyr,if_else)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rowwise)
@@ -45,7 +46,6 @@ importFrom(lubridate,interval)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
-importFrom(stats,prop.test)
 importFrom(stringr,str_sub)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
