--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(compute_prop_test)
 export(compute_wilcox)
 export(emergency_dates)
 export(generate_indicator_schema)
+export(get_associated_cpv_from_emergency)
+export(grab_cpv)
 export(ind_1)
 export(ind_2)
 export(ind_3)
