added `ind_9` content reference

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,6 +24,7 @@ reference:
       - ind_6
       - ind_7
       - ind_8
+      - ind_9
       - mock_data_core
       - emergency_dates
       - get_associated_cpv_from_emergency
