--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(compute_barnard)
 export(compute_fisher)
 export(compute_kolmogorov_smirnoff)
 export(compute_prop_test)
+export(compute_ttest)
 export(compute_wilcox)
 export(emergency_dates)
 export(generate_indicator_schema)
@@ -18,6 +19,7 @@ export(ind_5)
 export(ind_6)
 export(ind_7)
 export(ind_8)
+export(ind_9)
 import(rlang)
 importFrom(DescTools,Gini)
 importFrom(dplyr,across)
@@ -48,6 +50,7 @@ importFrom(lubridate,interval)
 importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
+importFrom(rlang,as_string)
 importFrom(stringr,str_sub)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
