--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,13 @@ Package: coresoi
 Title: Measuring Corruption Risk in Emergency
 Version: 0.1.1
 Authors@R: 
-    person("Niccolò", "Salvini", , "niccolo.salvini27@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-3444-4094"))
-Description: the package offers a set of indicators explicitly built on top of BNDCP to measure corruption in emergency
+    c(person(given = "Niccolo",family =  "Salvini", email = "niccolo.salvini27@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-3444-4094")),
+    person(given ="Simone", family = "DelSarto", email = "simone.delsarto@unipg.it", role = "aut",
+           comment = c(ORCID = "0000-0003-1102-2881")),
+    person(given = "Giulio", family = "Cantone", email = "prgcan@gmail.com", role = "aut",
+           comment = c(ORCID = "0000-0001-7149-5213")))
+Description: A package to calculate CORE red flags and to play with our data
 License: MIT + file LICENSE
 Suggests: 
     covr,
