--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -39,3 +39,12 @@ reference:
       - emergency_dates
       - get_associated_cpv_from_emergency
 
+articles:
+- title: Get started
+  navbar: ~
+  contents:
+  - coresoi
+  - try-coresoi-w-your-data
+  - Data-selection-and-architecture
+  - Choice-of-elementary-indicators
+
