--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,7 +4,7 @@ template:
   includes:
     in_header: |
       <script async defer src="https://hypothes.is/embed.js"></script>
-    before_body: |
+    after_navbar: |
       <div class = rmdreview> This documentation is offered in <b><a href="https://openreview.net/">Open Review</a></b> format. We kindly request your feedback in case something is unclear, poorly written, or incorrect. Your input would greatly assist us in improving these documents and providing a better experience for you and our partners. To add your annotations, <span style="background-color: #3297FD; color: white">simply highlight the text</span> and click on <i class="fa fa-quote-left" ></i>the pop-up menu. To view annotations from others, click on <i class="h-icon-chevron-left"></i> the top-right corner of the page <i class="fa fa-arrow-circle-right  fa-rotate-315" aria-hidden="true"></i> </div>
   bslib:
     bg: "#FFFFFF"
@@ -13,6 +13,10 @@ template:
     base_font: {google: "Dosis"}
     heading_font: {google: "Lora"}
     code_font: {google: "JetBrains Mono"}
+
+navbar:
+  structure:
+    right: github
 
 reference:
   - title: "Risk Indicators"
@@ -39,9 +43,16 @@ reference:
       - emergency_dates
       - get_associated_cpv_from_emergency
 
+
 articles:
-- title: Get started
+- title: "Get started!"
   navbar: ~
   contents:
   - coresoi
+  - articles/ChoiceOfElementaryIndicators
+  - articles/DataSelectionArchitecture
+  - articles/tryCoresoiWithYourData
+
+
+
 
