add new countries in schema based on partners

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(compute_wilcox)
 export(emergency_dates)
 export(generate_indicator_schema)
 export(get_associated_cpv_from_emergency)
+export(get_country_id_from_name)
 export(grab_cpv)
 export(ind_1)
 export(ind_2)
