distrubute tests across indicators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compute_fisher)
 export(compute_kolmogorov_smirnoff)
 export(compute_prop_test)
 export(compute_ttest)
+export(compute_unpaired_ttest)
 export(compute_wilcox)
 export(emergency_dates)
 export(generate_indicator_schema)
@@ -21,6 +22,8 @@ export(ind_6)
 export(ind_7)
 export(ind_8)
 export(ind_9)
+export(test_set_1)
+export(test_set_2)
 import(rlang)
 importFrom(DescTools,Gini)
 importFrom(dplyr,across)
