--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-URL: https://core-forge.github.io/coresoi/
+URL: https://core-forge.github.io/coresoi/, https://github.com/CORE-forge/coresoi
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
