--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Authors@R:
            comment = c(ORCID = "0000-0002-3444-4094")),
     person(given ="Simone", family = "DelSarto", email = "simone.delsarto@unipg.it", role = "aut",
            comment = c(ORCID = "0000-0003-1102-2881")),
-    person(given = "Giulio", family = "Cantone", email = "prgcan@gmail.com", role = "aut",
-           comment = c(ORCID = "0000-0001-7149-5213")))
+    person(given = "Michela", family = "Gnaldi", email = "michela.gnaldi@unipg.it", role = "aut",
+           comment = c(ORCID = "0000-0002-2785-3279")))
 Description: A package to calculate CORE red flags and to play with our data
 License: MIT + file LICENSE
 Suggests: 
