write vignette for API

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -61,3 +61,4 @@ articles:
   - articles/DataSelectionArchitecture
   - articles/CompositeIndicator
   - articles/tryCoresoiWithYourData
+  - articles/useCoresoiAPI
