--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,10 @@ License: MIT + file LICENSE
 Suggests: 
     covr,
     knitr,
-    h
+    httr,
     rmarkdown,
     spelling,
+    purrr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
