--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(compute_prop_test)
 export(compute_ttest)
 export(compute_wilcox)
 export(create_indicator_matrix)
+export(dimensionality_check)
 export(emergency_dates)
 export(generate_indicator_schema)
 export(get_associated_cpv_from_emergency)
