add main function to compute composite and related documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(aggregate)
 export(composite_sensitivity)
 export(composite_sensitivity_methods)
 export(compute_barnard)
+export(compute_composite)
 export(compute_fisher)
 export(compute_kolmogorov_smirnoff)
 export(compute_prop_test)
@@ -26,6 +27,10 @@ export(ind_6)
 export(ind_7)
 export(ind_8)
 export(ind_9)
+export(ind_all)
+export(ind_all_companies)
+export(ind_all_contr_auth)
+export(ind_all_geogr)
 export(manage_missing)
 export(normalise)
 import(rlang)
