--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -38,6 +38,8 @@ reference:
       - aggregate
       - composite_sensitivity
       - dimensionality_check
+      - ind_all
+      - compute_composite
 
 
   - title: "Data"
