finale review documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ importFrom(lubridate,ymd)
 importFrom(magrittr,"%>%")
 importFrom(mirt,MDISC)
 importFrom(mirt,mirt)
+importFrom(psych,fa)
 importFrom(rlang,as_string)
 importFrom(stringr,str_sub)
 importFrom(tidyr,drop_na)
