--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -28,18 +28,20 @@ reference:
       - ind_7
       - ind_8
       - ind_9
+      - ind_all
 
   - title: "Composite Indicator (CI) of corruption risk in emergencies"
-    desc: "Synthetic indicator of corruption risk by contracting authority, company, province and municipality (IRT dimensionality assessement )"
+    desc: "Synthetic indicator of corruption risk by contracting authority, company, province and region + Sensitivity Analysis + IRT dimensionality assessement of the elementary indicators"
     contents:
       - create_indicator_matrix
+      - manage_missing
       - normalise
       - get_weights
       - aggregate
+      - compute_composite
       - composite_sensitivity
       - dimensionality_check
-      - ind_all
-      - compute_composite
+
 
 
   - title: "Data"
