cpvs selection + rearranged statistical tests + documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ export(compute_fisher)
 export(compute_kolmogorov_smirnoff)
 export(compute_prop_test)
 export(compute_ttest)
+export(compute_unpaired_ttest)
 export(compute_wilcox)
 export(create_indicator_matrix)
 export(dimensionality_check)
 export(emergency_dates)
 export(generate_indicator_schema)
 export(get_associated_cpv_from_emergency)
+export(get_country_id_from_name)
 export(get_weights)
 export(grab_cpv)
 export(ind_1)
@@ -33,6 +35,8 @@ export(ind_all_contr_auth)
 export(ind_all_geogr)
 export(manage_missing)
 export(normalise)
+export(test_set_1)
+export(test_set_2)
 import(rlang)
 importFrom(DescTools,Gini)
 importFrom(dplyr,across)
